# Transitive-closure-computation

./: CMakeLists.txt  Makefile  README.md  algorithms.cpp  algorithms.h  digraph.cpp  digraph.h  graph.cpp  graph.dot  graph.h  main.cpp  types.h  utils.cpp  utils.h
algorithms/: algorithm.h  cr_tc.cpp  cr_tc.h  ebert.cpp  ebert.h  ebert_algorithm.cpp  ebert_algorithm.h  schmitz.cpp  schmitz.h  schmitz_algorithm.cpp  schmitz_algorithm.h  stack_tc.cpp  stack_tc.h  warshall.cpp  warshall.h
representations/: intervals.cpp  intervals.h  representation.h  succ_list.cpp  succ_list.h
results/: res.dot  res2.dot  res3.dot
